<resources>
    <string name="app_name">UnveiledApp</string>
    <string name="action_settings">Einstellung</string>
    <string name="title_activity_profile">Profil</string>
    <string name="title_activity_camera">Kamera</string>
    <string name="title_activity_upload_file">Datei-Upload</string>
    <string name="title_activity_settings">Einstellung</string>

    <!-- Strings related to Main -->
    <string name="main_camera">Kamera</string>
    <string name="main_upload">Datei-Upload</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Allgemein</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <!--settings for Data & Sync -->
    <string name="pref_header_data_sync">Server-Verbindung</string>

    <string name="pref_title_server_fqdn">Server Host</string>
    <string name="pref_title_server_port">Server Port</string>
    <string name="pref_title_acc_email">Account Email</string>
    <string name="pref_title_acc_password">Account Passwort</string>

    <string name="pref_default_server_fqdn">sas.systemgrid.de</string>
    <string name="pref_default_server_port">9999</string>
    <string name="pref_default_acc_email">hansmeyer@systemgrid.de</string>
    <string name="pref_default_acc_password">abcdef</string>

    <string name="pref_toast_login_success">Verbindungsdaten korrekt.</string>
    <string name="pref_toast_login_failed">Keine Verbindung möglich!</string>


    <!-- Settings for video -->
    <string name="pref_header_video">Video/Aufnahme</string>

    <string name="pref_title_video_resolution">Video Auflösung</string>
    <string-array name="pref_video_resolution">
        <item>1080p FULL HD</item>
        <item>720p HD</item>
        <item>480p VGA</item>
    </string-array>
    <string-array name="pref_video_resolution_values">
        <item>1080</item>
        <item>720</item>
        <item>480</item>
    </string-array>


    <!-- Settings for picture -->
    <string name="pref_header_picture">Bild-Upload</string>

    <string name="pref_title_picture_save">Local speichern</string>
    <string name="pref_description_picture_save">Bilder die über die App geschossen werden, werden im localen Bilderverzeichnis des Smartphones gespeichert</string>

</resources>
