<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="server_fqdn"
        android:title="@string/pref_title_server_fqdn"
        android:defaultValue="@string/pref_default_server_fqdn"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="server_port"
        android:title="@string/pref_title_server_port"
        android:defaultValue="@string/pref_default_server_port"
        android:selectAllOnFocus="true"
        android:inputType="numberSigned"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="acc_email"
        android:title="@string/pref_title_acc_email"
        android:defaultValue="@string/pref_default_acc_email"
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="acc_password"
        android:title="@string/pref_title_acc_password"
        android:defaultValue="@string/pref_default_acc_password"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />

</PreferenceScreen>
